Bug 463110 - Layer lock does not prevent moving selected parts of layer
Summary: Layer lock does not prevent moving selected parts of layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Move (other bugs)
Version First Reported In: 5.1.1
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Tiar
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-16 10:54 UTC by rebuilderster
Modified: 2023-03-17 17:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rebuilderster 2022-12-16 10:54:49 UTC
SUMMARY
If a layer is locked, the user can still make a selection and move the pixels selected.

STEPS TO REPRODUCE
1. Create a layer and draw something in it
2. Lock the layer
3. make a selection and use the move tool to move the pixels you have selected

OBSERVED RESULT
The selected pixels are moved

EXPECTED RESULT
Nothing should happen, since the layer is locked.
Comment 1 Halla Rempt 2022-12-16 11:09:41 UTC
Thanks for the report, I can confirm the issue.
Comment 2 Tiar 2023-03-17 17:01:13 UTC
Git commit 36573abc8c6ddd22b339d8f8c3da26da5bf5db1a by Agata Cacko.
Committed on 17/03/2023 at 17:00.
Pushed by tymond into branch 'master'.

Prevent moving selected parts of a locked layer

Before this commit, Move Tool could still move selected part
on a layer even if it was locked.
This commit prevents it from happening.

M  +10   -1    plugins/tools/basictools/kis_tool_move.cc

https://invent.kde.org/graphics/krita/commit/36573abc8c6ddd22b339d8f8c3da26da5bf5db1a