Prevent moving selected parts of a locked layer

Before this commit, Move Tool could still move selected part
on a layer even if it was locked.
This commit prevents it from happening.

BUG:463110